// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbCheckBox check CheckBox with value(=false) 1`] = `
<div>
  <div
    class="mb-3 mb-3"
  >
    <label
      class="form-check-label"
    >
      label
    </label>
    <input
      class="oi-form-input checkbox form-check-input"
      id="name"
      name="name"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`OIbCheckBox check CheckBox with value(=true) 1`] = `
<div>
  <div
    class="mb-3 mb-3"
  >
    <label
      class="form-check-label"
    >
      label
    </label>
    <input
      checked=""
      class="oi-form-input checkbox form-check-input"
      id="name"
      name="name"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`OIbCheckBox check Switch with value(=false) 1`] = `
<div>
  <div
    class="mb-3 form-check form-switch"
  >
    <label
      class="form-check-label"
    >
      label
    </label>
    <input
      class="oi-form-input checkbox form-check-input"
      id="name"
      name="name"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`OIbCheckBox check Switch with value(=true) 1`] = `
<div>
  <div
    class="mb-3 form-check form-switch"
  >
    <label
      class="form-check-label"
    >
      label
    </label>
    <input
      checked=""
      class="oi-form-input checkbox form-check-input"
      id="name"
      name="name"
      type="checkbox"
    />
  </div>
</div>
`;
